--- a/src/app/admin/layouts/header/header.component.html
+++ b/src/app/admin/layouts/header/header.component.html
@@ -58,7 +58,7 @@
                 <li class="sidenav-item">
                     <a routerLink="list-product" class="sidenav-link ">
                         <i class="fa fa-th"></i> &nbsp;
-                        <div>Tables</div>
+                        <div>Product</div>
                     </a>
                 </li>
                 <!-- Manage -->
@@ -239,7 +239,7 @@
                     <!-- nội dung -->
 
                         <router-outlet></router-outlet>
-                    
+
                 </div>
                 <!-- [ content ] End -->
 
