--- a/src/app/admin/product/list-product/list-product.component.html
+++ b/src/app/admin/product/list-product/list-product.component.html
@@ -2,25 +2,22 @@
 
   <!-- [ content ] Start -->
   <div class="container-fluid flex-grow-1 container-p-y">
-      <h4 class="font-weight-bold py-3 mb-0">Layouts and elements</h4>
-      <div class="text-muted small mt-0 mb-4 d-block breadcrumb">
-          <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#"><i class="feather icon-home"></i></a></li>
-              <li class="breadcrumb-item">Forms</li>
-              <li class="breadcrumb-item active">Layouts and elements</li>
-          </ol>
-      </div>
+      <h4 class="font-weight-bold py-3 mb-0">List Product</h4>
+
 
       <hr class="border-light container-m--x my-4">
-      <h6 class="text-muted small font-weight-bold py-3 my-4">Table head options</h6>
 
+    <div>
+      <a class="btn btn-success mb-3" href="#">Add Product</a>
+    </div>
       <table class="table table-striped">
           <thead class="thead-dark">
               <tr>
-                  <th>#</th>
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Username</th>
+                  <th>ID</th>
+                  <th>Image</th>
+                  <th>Name</th>
+                  <th>Price</th>
+                  <th>Status</th>
                   <th>Edit</th>
                   <th>delete</th>
               </tr>
@@ -28,67 +25,58 @@
           <tbody>
               <tr>
                   <th scope="row">1</th>
-                  <td scope="col">Mark</td>
-                  <td scope="col">Otto</td>
-                  <td>@mdo</td>
+                  <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
+                  <td scope="col">Carrot</td>
+                  <td>25000</td>
+                  <td><button type="button" class="btn btn-round btn-success">active</button></td>
                   <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
                   <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
               </tr>
               <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                  <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                  <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
-              </tr>
-              <tr>
-                  <th scope="row">3</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-                  <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                  <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
-              </tr>
-              <tr>
-                  <th scope="row">4</th>
-                  <td>Jacob</td>
-                  <td>the Fixz</td>
-                  <td>@fat</td>
-                  <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                  <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
-              </tr>
-              <tr>
-                  <th scope="row">5</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-                  <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                  <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
-              </tr>
+                <th scope="row">2</th>
+                <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
+                <td scope="col">Carrot</td>
+                <td>25000</td>
+                <td><button type="button" class="btn btn-round btn-success">active</button></td>
+
+                <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
+              <td scope="col">Carrot</td>
+              <td>25000</td>
+              <td><button type="button" class="btn btn-round btn-success">active</button></td>
+
+              <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+              <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+          </tr>
+          <tr>
+            <th scope="row">4</th>
+            <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
+            <td scope="col">Carrot</td>
+            <td>25000</td>
+            <td><button type="button" class="btn btn-round btn-success">active</button></td>
+            <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+            <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
+          <td scope="col">Carrot</td>
+          <td>25000</td>
+          <td><button type="button" class="btn btn-round btn-success">active</button></td>
+
+          <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+          <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+      </tr>
           </tbody>
       </table>
 
 
   </div>
 
-
   <!-- [ content ] End -->
-
-  <!-- [ Layout footer ] Start -->
-  <nav class="layout-footer footer bg-white">
-      <div class="container-fluid d-flex flex-wrap justify-content-between text-center container-p-x pb-3">
-          <div class="pt-3">
-              <span class="footer-text font-weight-semibold">&copy; <a href="https://srthemesvilla.com" class="footer-link" target="_blank">Srthemesvilla</a></span>
-          </div>
-          <div>
-              <a href="javascript:" class="footer-link pt-3">About Us</a>
-              <a href="javascript:" class="footer-link pt-3 ml-4">Help</a>
-              <a href="javascript:" class="footer-link pt-3 ml-4">Contact</a>
-              <a href="javascript:" class="footer-link pt-3 ml-4">Terms &amp; Conditions</a>
-          </div>
-      </div>
-  </nav>
-  <!-- [ Layout footer ] End -->
 
 </div>
