--- a/src/app/admin/user/list-user/list-user.component.html
+++ b/src/app/admin/user/list-user/list-user.component.html
@@ -1,3 +1,79 @@
-<p>
-  list-user works!
-</p>
+<div class="layout-content">
+
+    <!-- [ content ] Start -->
+    <div class="container-fluid flex-grow-1 container-p-y">
+        <h4 class="font-weight-bold py-3 mb-0">List User</h4>
+
+
+        <hr class="border-light container-m--x my-4">
+
+        <div>
+            <a class="btn btn-success mb-3" href="#">Add User</a>
+        </div>
+        <table class="table table-striped">
+            <thead class="thead-dark">
+                <tr>
+                    <th>ID</th>
+                    <th>Username</th>
+                    <th>Password</th>
+                    <th>Email</th>
+                    <th>Name</th>
+                    <th>Edit</th>
+                    <th>delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td scope="col">trung123</td>
+                    <td scope="col">123456</td>
+                    <td scope="col">anhtrung738@gmail.com</td>
+                    <td scope="col">Huỳnh Minh Trung</td>
+                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                </tr>
+                <tr>
+                    <th scope="row">1</th>
+                    <td scope="col">trung123</td>
+                    <td scope="col">123456</td>
+                    <td scope="col">anhtrung738@gmail.com</td>
+                    <td scope="col">Huỳnh Minh Trung</td>
+                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                </tr>
+                <tr>
+                    <th scope="row">1</th>
+                    <td scope="col">trung123</td>
+                    <td scope="col">123456</td>
+                    <td scope="col">anhtrung738@gmail.com</td>
+                    <td scope="col">Huỳnh Minh Trung</td>
+                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                </tr>
+                <tr>
+                    <th scope="row">1</th>
+                    <td scope="col">trung123</td>
+                    <td scope="col">123456</td>
+                    <td scope="col">anhtrung738@gmail.com</td>
+                    <td scope="col">Huỳnh Minh Trung</td>
+                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                </tr>
+                <tr>
+                    <th scope="row">1</th>
+                    <td scope="col">trung123</td>
+                    <td scope="col">123456</td>
+                    <td scope="col">anhtrung738@gmail.com</td>
+                    <td scope="col">Huỳnh Minh Trung</td>
+                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                </tr>
+            </tbody>
+        </table>
+
+
+    </div>
+
+    <!-- [ content ] End -->
+
+</div>
