--- a/src/app/admin/user/add-user/add-user.component.html
+++ b/src/app/admin/user/add-user/add-user.component.html
@@ -3,17 +3,17 @@
 
     <!-- [ content ] Start -->
     <div class="container-fluid flex-grow-1 container-p-y">
-        <h4 class="font-weight-bold py-3 mb-0">Add Category</h4>
+        <h4 class="font-weight-bold py-3 mb-0">Add User</h4>
         <div class="text-muted small mt-0 mb-4 d-block breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#"><i class="feather icon-home"></i></a></li>
-                <li class="breadcrumb-item">Product</li>
-                <li class="breadcrumb-item active">Edit Product</li>
+                <li class="breadcrumb-item">User</li>
+                <li class="breadcrumb-item active">Edit User</li>
             </ol>
         </div>
 
         <div class="card mb-4">
-            <h6 class="card-header">Edit Product</h6>
+            <h6 class="card-header">Edit User</h6>
             <div class="card-body">
                 <form>
                     <div class="form-group col-md-6">
