--- a/src/app/admin/user/list-user/list-user.component.html
+++ b/src/app/admin/user/list-user/list-user.component.html
@@ -2,13 +2,15 @@
 
     <!-- [ content ] Start -->
     <div class="container-fluid flex-grow-1 container-p-y">
+        <router-outlet></router-outlet>
+
         <h4 class="font-weight-bold py-3 mb-0">List User</h4>
 
 
         <hr class="border-light container-m--x my-4">
 
         <div>
-            <a class="btn btn-success mb-3" href="#">Add User</a>
+            <a class="btn btn-success mb-3" routerLink="add-user">Add User</a>
         </div>
         <table class="table table-striped">
             <thead class="thead-dark">
@@ -29,8 +31,8 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -38,8 +40,8 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -47,8 +49,8 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -56,8 +58,8 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -65,8 +67,8 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
             </tbody>
         </table>
