--- a/src/app/admin/user/list-user/list-user.component.html
+++ b/src/app/admin/user/list-user/list-user.component.html
@@ -1,15 +1,14 @@
+<div class="layout-content">
 
     <!-- [ content ] Start -->
     <div class="container-fluid flex-grow-1 container-p-y">
-        <router-outlet></router-outlet>
-
         <h4 class="font-weight-bold py-3 mb-0">List User</h4>
 
 
         <hr class="border-light container-m--x my-4">
 
         <div>
-            <a class="btn btn-success mb-3" routerLink="add-user">Add User</a>
+            <a class="btn btn-success mb-3" href="#">Add User</a>
         </div>
         <table class="table table-striped">
             <thead class="thead-dark">
@@ -30,8 +29,8 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
-                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
+                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -39,8 +38,8 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
-                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
+                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -48,8 +47,8 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
-                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
+                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -57,8 +56,8 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
-                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
+                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
@@ -66,16 +65,14 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
-                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
+                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
+                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
                 </tr>
             </tbody>
         </table>
 
 
     </div>
-
     <!-- [ content ] End -->
 
 </div>
-
