--- a/src/app/client/auth/login/login.component.html
+++ b/src/app/client/auth/login/login.component.html
@@ -1,5 +1,5 @@
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 <!-- <link rel="stylesheet" href="../../../../assets/client/css/style.css"> -->
 <div class="container">
     <div class="row justify-content-center">
