--- a/src/app/admin/category/list-category/list-category.component.html
+++ b/src/app/admin/category/list-category/list-category.component.html
@@ -1,12 +1,13 @@
 <div class="layout-content">
     <div class="container-fluid flex-grow-1 container-p-y">
+        <router-outlet></router-outlet>
         <h4 class="font-weight-bold py-3 mb-0">List Category</h4>
 
 
         <hr class="border-light container-m--x my-4">
 
         <div>
-            <a class="btn btn-success mb-3" href="#">Add Category</a>
+            <a class="btn btn-success mb-3" routerLink="add-category">Add Category</a>
         </div>
         <table class="table table-striped">
             <thead class="thead-dark">
@@ -25,9 +26,9 @@
                     <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
                     <td scope="col">Vegetable</td>
 
-                    <td><button type="button" class="btn btn-round btn-success">active</button></td>
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td><a type="a" class="btn btn-round btn-success">active</a></td>
+                    <td> <a routerLink="edit-category" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
@@ -38,8 +39,8 @@
                         <div class="btn btn-round btn-success">active</div>
                     </td>
 
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td> <a routerLink="edit-category" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
@@ -50,8 +51,8 @@
                         <div class="btn btn-round btn-success">active</div>
                     </td>
 
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td> <a routerLink="edit-category" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
             </tbody>
         </table>
