--- a/src/app/admin/product/list-product/list-product.component.html
+++ b/src/app/admin/product/list-product/list-product.component.html
@@ -1,12 +1,13 @@
 <div class="layout-content">
     <div class="container-fluid flex-grow-1 container-p-y">
+        <router-outlet></router-outlet>
         <h4 class="font-weight-bold py-3 mb-0">List Product</h4>
 
 
         <hr class="border-light container-m--x my-4">
 
         <div>
-            <a class="btn btn-success mb-3" href="#">Add Product</a>
+            <a class="btn btn-success mb-3" routerLink="add-product">Add Product</a>
         </div>
         <table class="table table-striped">
             <thead class="thead-dark">
@@ -26,48 +27,48 @@
                     <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
                     <td scope="col">Carrot</td>
                     <td>25000</td>
-                    <td><button type="button" class="btn btn-round btn-success">active</button></td>
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td><a type="a" class="btn btn-round btn-success">active</a></td>
+                    <td> <a routerLink="edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
                     <td scope="col">Carrot</td>
                     <td>25000</td>
-                    <td><button type="button" class="btn btn-round btn-success">active</button></td>
+                    <td><a type="a" class="btn btn-round btn-success">active</a></td>
 
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td> <a routerLink="edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
                     <td scope="col">Carrot</td>
                     <td>25000</td>
-                    <td><button type="button" class="btn btn-round btn-success">active</button></td>
+                    <td><a type="a" class="btn btn-round btn-success">active</a></td>
 
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td> <a routerLink="edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
                     <th scope="row">4</th>
                     <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
                     <td scope="col">Carrot</td>
                     <td>25000</td>
-                    <td><button type="button" class="btn btn-round btn-success">active</button></td>
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td><a type="a" class="btn btn-round btn-success">active</a></td>
+                    <td> <a routerLink="edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
                     <th scope="row">5</th>
                     <td scope="col"><img width="150px" src="https://www.jordbærklausen.dk/wp-content/uploads/2021/04/h3-product10.png" alt=""></td>
                     <td scope="col">Carrot</td>
                     <td>25000</td>
-                    <td><button type="button" class="btn btn-round btn-success">active</button></td>
+                    <td><a type="a" class="btn btn-round btn-success">active</a></td>
 
-                    <td> <button class="btn btn-primary"><i class="fa fa-edit"></i></button></td>
-                    <td> <button class="btn btn-danger"><i class="fa fa-trash"></i></button></td>
+                    <td> <a routerLink="edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
             </tbody>
         </table>
