--- a/src/app/client/layouts/header/header.component.html
+++ b/src/app/client/layouts/header/header.component.html
@@ -1,3 +1,58 @@
-<p>
-  header works!
-</p>
+<div class="container topbar rounded-pill bg-primary d-none d-lg-block">
+  <div class="d-flex justify-content-between">
+    <div class="top-info ps-2">
+      <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i>
+        <a href="#" class="text-white">158, Xô Viết Nghệ Tỉnh, TP.HCM</a></small>
+      <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#" class="text-white"></a></small>
+    </div>
+    <div class="top-link pe-2">
+      <a href="#" class="text-white"><small class="text-white mx-2">Chính sách bảo mật</small>/</a>
+      <a href="#" class="text-white"><small class="text-white mx-2">Điều khoản sử dụng</small></a>
+    </div>
+  </div>
+</div>
+<div class="container px-0">
+  <nav class="navbar navbar-light bg-white navbar-expand-xl navbar-custom">
+    <a href="index.html" class="navbar-brand">
+      <img class="img-fluid logo rounded-circle" src="../../../assets/img/logo.png" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+      <span class="fa fa-bars text-primary"></span>
+    </button>
+    <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
+      <div class="navbar-nav mx-auto">
+        <a class="nav-item nav-link active">Trang chủ</a>
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle">Sản phẩm</a>
+          <div class="dropdown-menu m-0 bg-secondary rounded-0">
+            <a class="dropdown-item">Trái Cây</a>
+            <a class="dropdown-item">Rau củ</a>
+            <a class="dropdown-item">Thịt</a>
+          </div>
+        </div>
+        <a href="introduce.html" class="nav-item nav-link">Giới thiệu</a>
+        <a href="#" class="nav-item nav-link">Chính sách</a>
+        <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
+      </div>
+      <div class="d-flex m-3 me-0">
+        <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal">
+          <i class="fas fa-search text-primary"></i>
+        </button>
+        <a href="#" class="position-relative me-4 my-auto">
+          <i class="fa fa-shopping-bag fa-2x"></i>
+          <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px">3</span>
+        </a>
+        <a href="#" class="my-auto">
+          <div class="nav-item dropdown ">
+            <a href="#" class="nav-link dropdown-toggles"> <i id="user-icon" class="fas fa-user fa-2x"></i></a>
+            <div class="menu dropdown-menu  bg-secondary rounded-0">
+              <a href="login.html" class="dropdown-item"> Đăng nhập</a>
+              <a href="signup.html" class="dropdown-item"> Đăng kí</a>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </nav>
+
+</div>
