--- a/src/app/admin/product/list-product/list-product.component.html
+++ b/src/app/admin/product/list-product/list-product.component.html
@@ -7,7 +7,7 @@
         <hr class="border-light container-m--x my-4">
 
         <div>
-            <a class="btn btn-success mb-3" routerLink="add-product">Add Product</a>
+            <a class="btn btn-success mb-3" routerLink="/admin/add-product">Add Product</a>
         </div>
         <table class="table table-striped">
             <thead class="thead-dark">
@@ -28,7 +28,7 @@
                     <td scope="col">Carrot</td>
                     <td>25000</td>
                     <td><a type="a" class="btn btn-round btn-success">active</a></td>
-                    <td> <a routerLink="edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
@@ -38,7 +38,7 @@
                     <td>25000</td>
                     <td><a type="a" class="btn btn-round btn-success">active</a></td>
 
-                    <td> <a routerLink="edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
@@ -48,7 +48,7 @@
                     <td>25000</td>
                     <td><a type="a" class="btn btn-round btn-success">active</a></td>
 
-                    <td> <a routerLink="edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
@@ -57,7 +57,7 @@
                     <td scope="col">Carrot</td>
                     <td>25000</td>
                     <td><a type="a" class="btn btn-round btn-success">active</a></td>
-                    <td> <a routerLink="edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
@@ -67,7 +67,7 @@
                     <td>25000</td>
                     <td><a type="a" class="btn btn-round btn-success">active</a></td>
 
-                    <td> <a routerLink="edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-product" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
             </tbody>
