--- a/src/app/admin/user/list-user/list-user.component.html
+++ b/src/app/admin/user/list-user/list-user.component.html
@@ -10,7 +10,7 @@
         <hr class="border-light container-m--x my-4">
 
         <div>
-            <a class="btn btn-success mb-3" routerLink="add-user">Add User</a>
+            <a class="btn btn-success mb-3" routerLink="/admin/add-user">Add User</a>
         </div>
         <table class="table table-striped">
             <thead class="thead-dark">
@@ -31,7 +31,7 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
@@ -40,7 +40,7 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
@@ -49,7 +49,7 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
@@ -58,7 +58,7 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
                 <tr>
@@ -67,7 +67,7 @@
                     <td scope="col">123456</td>
                     <td scope="col">anhtrung738@gmail.com</td>
                     <td scope="col">Huỳnh Minh Trung</td>
-                    <td> <a routerLink="edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
+                    <td> <a routerLink="/admin/edit-user" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
                     <td> <a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                 </tr>
             </tbody>
