--- a/src/app/client/client-index/client-index.component.html
+++ b/src/app/client/client-index/client-index.component.html
@@ -46,39 +46,37 @@
         <span class="fa fa-bars text-primary"></span>
       </button>
       <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
-        <div class="navbar-nav mx-auto">
-          <a class="nav-item nav-link active">Trang chủ</a>
-          <div class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle">Sản phẩm</a>
-            <div class="dropdown-menu m-0 bg-secondary rounded-0">
-              <a class="dropdown-item">Trái Cây</a>
-              <a class="dropdown-item">Rau củ</a>
-              <a class="dropdown-item">Thịt</a>
-            </div>
-          </div>
-          <a href="introduce.html" class="nav-item nav-link">Giới thiệu</a>
-          <a href="#" class="nav-item nav-link">Chính sách</a>
-          <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
-        </div>
-        <div class="d-flex m-3 me-0">
-          <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal">
-            <i class="fas fa-search text-primary"></i>
-          </button>
-          <a href="#" class="position-relative me-4 my-auto">
-            <i class="fa fa-shopping-bag fa-2x"></i>
-            <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px">3</span>
-          </a>
-          <a href="#" class="my-auto">
-            <div class="nav-item dropdown ">
-              <a href="#" class="nav-link dropdown-toggles"> <i id="user-icon" class="fas fa-user fa-2x"></i></a>
-              <div class="menu dropdown-menu  bg-secondary rounded-0">
-                <a href="login.html" class="dropdown-item"> Đăng nhập</a>
-                <a href="signup.html" class="dropdown-item"> Đăng kí</a>
-              </div>
-            </div>
-          </a>
+  <div class="navbar-nav mx-auto">
+    <a class="nav-item nav-link active" routerLink="">Trang chủ</a>
+    <div class="nav-item dropdown">
+      <a class="nav-item nav-link active" routerLink="client-product">Sản phẩm</a>
+    </div>
+    <a href="introduce.html" class="nav-item nav-link">Giới thiệu</a>
+    <a href="#" class="nav-item nav-link">Chính sách</a>
+    <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
+  </div>
+  <div class="d-flex m-3 me-0">
+    <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal">
+      <i class="fas fa-search text-primary"></i>
+    </button>
+    <a href="#" class="position-relative me-4 my-auto">
+      <i class="fa fa-shopping-bag fa-2x"></i>
+      <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px">3</span>
+    </a>
+    <a href="#" class="my-auto">
+      <div class="nav-item dropdown">
+        <a href="#" class="nav-link dropdown-toggles">
+          <i id="user-icon" class="fas fa-user fa-2x"></i>
+        </a>
+        <div class="menu dropdown-menu bg-secondary rounded-0">
+          <a href="login.html" class="dropdown-item">Đăng nhập</a>
+          <a href="signup.html" class="dropdown-item">Đăng kí</a>
         </div>
       </div>
+    </a>
+  </div>
+</div>
+
     </nav>
 
   </div>
@@ -121,11 +119,12 @@
           </h1>
           <div class="position-relative mx-auto">
             <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="number" placeholder="Tìm kiếm">
-            <button type="submit" class="btn btn-primary border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100" style="top: 0; right: 25%;">
+            <button type="submit" class="btn btn-primary border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100" style="top: 0; right: 25%; display: flex; align-items: center; justify-content: center;">
               <font style="vertical-align: inherit;">
                 <font style="vertical-align: inherit;">Xác nhận ngay bây giờ</font>
               </font>
             </button>
+            
           </div>
         </div>
         <div class="col-md-12 col-lg-5">
@@ -316,254 +315,6 @@
                     </div>
                   </div>
 
-                </div>
-              </div>
-            </div>
-          </div>
-          <div id="tab-2" class="tab-pane fade show p-0">
-            <div class="row g-4">
-              <div class="col-lg-12">
-                <div class="row g-4">
-                  <div class="col-md-6 col-lg-4 col-xl-3">
-                    <div class="rounded position-relative fruite-item">
-                      <div class="fruite-img">
-                        <img src="../../../assets/img/fruite-item-1.jpg" class="img-fluid w-100 rounded-top" alt="" />
-                      </div>
-                      <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px">
-                        Fruits
-                      </div>
-                      <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                        <h4>Oranges</h4>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit sed do eiusmod te incididunt
-                        </p>
-                        <div class="d-flex justify-content-between flex-lg-wrap">
-                          <p class="text-dark fs-5 fw-bold mb-0">
-                            $4.99 / kg
-                          </p>
-                          <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                            Add to cart</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6 col-lg-4 col-xl-3">
-                    <div class="rounded position-relative fruite-item">
-                      <div class="fruite-img">
-                        <img src="../../../assets/img/fruite-item-6.jpg" class="img-fluid w-100 rounded-top" alt="" />
-                      </div>
-                      <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px">
-                        Fruits
-                      </div>
-                      <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                        <h4>Apple</h4>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit sed do eiusmod te incididunt
-                        </p>
-                        <div class="d-flex justify-content-between flex-lg-wrap">
-                          <p class="text-dark fs-5 fw-bold mb-0">
-                            $4.99 / kg
-                          </p>
-                          <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                            Add to cart</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div id="tab-3" class="tab-pane fade show p-0">
-            <div class="row g-4">
-              <div class="col-lg-12">
-                <div class="row g-4">
-                  <div class="col-md-6 col-lg-4 col-xl-3">
-                    <div class="rounded position-relative fruite-item">
-                      <div class="fruite-img">
-                        <img src="../../../assets/img/fruite-item-1.jpg" class="img-fluid w-100 rounded-top" alt="" />
-                      </div>
-                      <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px">
-                        Fruits
-                      </div>
-                      <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                        <h4>Oranges</h4>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit sed do eiusmod te incididunt
-                        </p>
-                        <div class="d-flex justify-content-between flex-lg-wrap">
-                          <p class="text-dark fs-5 fw-bold mb-0">
-                            $4.99 / kg
-                          </p>
-                          <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                            Add to cart</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6 col-lg-4 col-xl-3">
-                    <div class="rounded position-relative fruite-item">
-                      <div class="fruite-img">
-                        <img src="../../../assets/img/fruite-item-6.jpg" class="img-fluid w-100 rounded-top" alt="" />
-                      </div>
-                      <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px">
-                        Fruits
-                      </div>
-                      <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                        <h4>Apple</h4>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit sed do eiusmod te incididunt
-                        </p>
-                        <div class="d-flex justify-content-between flex-lg-wrap">
-                          <p class="text-dark fs-5 fw-bold mb-0">
-                            $4.99 / kg
-                          </p>
-                          <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                            Add to cart</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div id="tab-4" class="tab-pane fade show p-0">
-            <div class="row g-4">
-              <div class="col-lg-12">
-                <div class="row g-4">
-                  <div class="col-md-6 col-lg-4 col-xl-3">
-                    <div class="rounded position-relative fruite-item">
-                      <div class="fruite-img">
-                        <img src="../../../assets/img/fruite-item-5.jpg" class="img-fluid w-100 rounded-top" alt="" />
-                      </div>
-                      <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px">
-                        Fruits
-                      </div>
-                      <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                        <h4>Grapes</h4>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit sed do eiusmod te incididunt
-                        </p>
-                        <div class="d-flex justify-content-between flex-lg-wrap">
-                          <p class="text-dark fs-5 fw-bold mb-0">
-                            $4.99 / kg
-                          </p>
-                          <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                            Add to cart</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6 col-lg-4 col-xl-3">
-                    <div class="rounded position-relative fruite-item">
-                      <div class="fruite-img">
-                        <img src="../../../assets/img/fruite-item-4.jpg" class="img-fluid w-100 rounded-top" alt="" />
-                      </div>
-                      <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px">
-                        Fruits
-                      </div>
-                      <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                        <h4>Apricots</h4>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit sed do eiusmod te incididunt
-                        </p>
-                        <div class="d-flex justify-content-between flex-lg-wrap">
-                          <p class="text-dark fs-5 fw-bold mb-0">
-                            $4.99 / kg
-                          </p>
-                          <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                            Add to cart</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div id="tab-5" class="tab-pane fade show p-0">
-            <div class="row g-4">
-              <div class="col-lg-12">
-                <div class="row g-4">
-                  <div class="col-md-6 col-lg-4 col-xl-3">
-                    <div class="rounded position-relative fruite-item">
-                      <div class="fruite-img">
-                        <img src="../../../assets/img/fruite-item-3.jpg" class="img-fluid w-100 rounded-top" alt="" />
-                      </div>
-                      <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px">
-                        Fruits
-                      </div>
-                      <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                        <h4>Banana</h4>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit sed do eiusmod te incididunt
-                        </p>
-                        <div class="d-flex justify-content-between flex-lg-wrap">
-                          <p class="text-dark fs-5 fw-bold mb-0">
-                            $4.99 / kg
-                          </p>
-                          <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                            Add to cart</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6 col-lg-4 col-xl-3">
-                    <div class="rounded position-relative fruite-item">
-                      <div class="fruite-img">
-                        <img src="../../../assets/img/fruite-item-2.jpg" class="img-fluid w-100 rounded-top" alt="" />
-                      </div>
-                      <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px">
-                        Fruits
-                      </div>
-                      <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                        <h4>Raspberries</h4>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit sed do eiusmod te incididunt
-                        </p>
-                        <div class="d-flex justify-content-between flex-lg-wrap">
-                          <p class="text-dark fs-5 fw-bold mb-0">
-                            $4.99 / kg
-                          </p>
-                          <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                            Add to cart</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-6 col-lg-4 col-xl-3">
-                    <div class="rounded position-relative fruite-item">
-                      <div class="fruite-img">
-                        <img src="../../../assets/img/fruite-item-1.jpg" class="img-fluid w-100 rounded-top" alt="" />
-                      </div>
-                      <div class="text-white bg-secondary px-3 py-1 rounded position-absolute" style="top: 10px; left: 10px">
-                        Fruits
-                      </div>
-                      <div class="p-4 border border-secondary border-top-0 rounded-bottom">
-                        <h4>Oranges</h4>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit sed do eiusmod te incididunt
-                        </p>
-                        <div class="d-flex justify-content-between flex-lg-wrap">
-                          <p class="text-dark fs-5 fw-bold mb-0">
-                            $4.99 / kg
-                          </p>
-                          <a href="#" class="btn border border-secondary rounded-pill px-3 text-primary"><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                            Add to cart</a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
