--- a/src/app/client/client-product/client-product.component.html
+++ b/src/app/client/client-product/client-product.component.html
@@ -4,93 +4,76 @@
 <head>
     <meta charset="utf-8">
     <title>NT FOODS - Sản phẩm</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <meta content="" name="keywords" />
+  <meta content="" name="description" />
+  <!-- Google Web Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@600;800&display=swap" rel="stylesheet" />
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@600;800&display=swap"
-        rel="stylesheet" />
-
-    <!-- Icon Font Stylesheet -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
+  <!-- Icon Font Stylesheet -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
 
 </head>
 
 <body>
 
     <!-- Navbar start -->
-    <div class="container-fluid fixed-top">
-        <div class="container topbar rounded-pill bg-primary d-none d-lg-block">
-            <div class="d-flex justify-content-between">
-                <div class="top-info ps-2">
-                    <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i>
-                        <a href="#" class="text-white">158, Xô Viết Nghệ Tỉnh, TP.HCM</a></small>
-                    <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#"
-                            class="text-white"></a></small>
-                </div>
-                <div class="top-link pe-2">
-                    <a href="#" class="text-white"><small class="text-white mx-2">Chính sách bảo mật</small>/</a>
-                    <a href="#" class="text-white"><small class="text-white mx-2">Điều khoản sử dụng</small></a>
-                </div>
+    <div class="container topbar rounded-pill bg-primary d-none d-lg-block">
+        <div class="d-flex justify-content-between">
+          <div class="top-info ps-2">
+            <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i>
+              <a href="#" class="text-white">158, Xô Viết Nghệ Tỉnh, TP.HCM</a></small>
+            <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#" class="text-white"></a></small>
+          </div>
+          <div class="top-link pe-2">
+            <a href="#" class="text-white"><small class="text-white mx-2">Chính sách bảo mật</small>/</a>
+            <a href="#" class="text-white"><small class="text-white mx-2">Điều khoản sử dụng</small></a>
+          </div>
+        </div>
+      </div>
+      <div class="container px-0">
+        <nav class="navbar navbar-light bg-white navbar-expand-xl navbar-custom">
+          <a href="index.html" class="navbar-brand">
+            <img class="img-fluid logo rounded-circle" src="../../../assets/img/logo.png" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="fa fa-bars text-primary"></span>
+          </button>
+          <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
+            <div class="navbar-nav mx-auto">
+              <a href="#"class="nav-item nav-link active" routerLink="client-index">Trang chủ</a>
+              <div class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" >Sản phẩm</a>
+              </div>
+              <a href="" class="nav-item nav-link">Giới thiệu</a>
+              <a href="#" class="nav-item nav-link">Chính sách</a>
+              <a href="" class="nav-item nav-link">Liên hệ</a>
             </div>
-        </div>
-        <div class="container px-0">
-            <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                <a href="index.html" class="navbar-brand">
-                    <img class="img-fluid logo w-25 h-25 rounded-circle" style="width: 130px; height: 130px;"
-                        src="../../../assets/img/logo.png" alt="">
-                </a>
-                <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse">
-                    <span class="fa fa-bars text-primary"></span>
-                </button>
-                <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
-                    <div class="navbar-nav mx-auto">
-                        <a href="index.html" class="nav-item nav-link active">Trang chủ</a>
-                        <div class="nav-item dropdown">
-                            <a href="shop.html" class="nav-link dropdown-toggle">Sản phẩm</a>
-                            <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                <a href="#" class="dropdown-item">Trái Cây</a>
-                                <a href="#" class="dropdown-item">Rau củ</a>
-                                <a href="#" class="dropdown-item">Thịt</a>
-                            </div>
-                        </div>
-                        <a href="introduce.html" class="nav-item nav-link">Giới thiệu</a>
-                        <a href="#" class="nav-item nav-link">Chính sách</a>
-                        <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
-                    </div>
-                    <div class="d-flex m-3 me-0">
-                        <button
-                            class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4"
-                            data-bs-toggle="modal" data-bs-target="#searchModal">
-                            <i class="fas fa-search text-primary"></i>
-                        </button>
-                        <a href="#" class="position-relative me-4 my-auto">
-                            <i class="fa fa-shopping-bag fa-2x"></i>
-                            <span
-                                class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
-                                style="top: -5px; left: 15px; height: 20px; min-width: 20px">3</span>
-                        </a>
-                        <a href="#" class="my-auto">
-                            <div class="nav-item dropdown ">
-                                <a href="#" class="nav-link dropdown-toggles"> <i id="user-icon"
-                                        class="fas fa-user fa-2x"></i></a>
-                                <div class="menu dropdown-menu  bg-secondary rounded-0" >
-                                    <a href="login.html" class="dropdown-item"> Đăng nhập</a>
-                                <a href="signup.html" class="dropdown-item"> Đăng kí</a>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
+            <div class="d-flex m-3 me-0">
+              <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal">
+                <i class="fas fa-search text-primary"></i>
+              </button>
+              <a href="#" class="position-relative me-4 my-auto">
+                <i class="fa fa-shopping-bag fa-2x"></i>
+                <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px">3</span>
+              </a>
+              <a href="#" class="my-auto">
+                <div class="nav-item dropdown ">
+                  <a href="#" class="nav-link dropdown-toggles"> <i id="user-icon" class="fas fa-user fa-2x"></i></a>
+                  <div class="menu dropdown-menu  bg-secondary rounded-0">
+                    <a href="" class="dropdown-item"> Đăng nhập</a>
+                    <a href="" class="dropdown-item"> Đăng kí</a>
+                  </div>
                 </div>
-            </nav>
-        </div>
-    </div>
+              </a>
+            </div>
+          </div>
+        </nav>
+    
+      </div>
     <!-- Navbar End -->
 
 
